--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <h1 id="time-left"></h1>
-    <img src="/images/img1.png" height="300" width="280">
+    <!-- <img src="/images/img1.png" height="300" width="280"> -->
     <script src="main.js"></script>
   </body>
 </html
